add search event endpoint by name
