# src/config/apispec.json
@@ -158,7 +158,7 @@
                     "designation": "VP"
                   }
                 ],
-                "event_types": ["stuff", "new"]
+                "eventTypes": ["stuff", "new"]
               }
             }
           }
@@ -171,6 +171,40 @@
         "responses": {
           "default": {
             "description": "sucessful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/events/search": {
+      "get": {
+        "tags": ["event"],
+        "summary": "Search event by name",
+        "description": "Retrieve  top 5 events containing inputted string",
+        "security": [
+          {
+            "noauthAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation",
             "content": {
               "application/json": {
                 "schema": {
@@ -332,6 +366,7 @@
         }
       }
     },
+
     "/registrations/search": {
       "get": {
         "tags": ["registrations"],
